tests/errors/codec_field_name_invalid.dang
# Codec field names must not contain control characters.

type InvalidName {
  field: String! @JSON.field(name: "bad\nname")
}

print("Should not reach here!")
